Prevent link from stretching full width

--- a/apollo/assets/styles/sass/50-core-components/_members-grid.scss
+++ b/apollo/assets/styles/sass/50-core-components/_members-grid.scss
@@ -38,6 +38,12 @@
 
 }
 
+.component--members__grid + a {
+
+	align-self: flex-start;
+
+}
+
 .component--members__grid > div {
 
 	background-color: $white;
